--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -20,7 +20,7 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout>
-  <HeaderCard title={astropodConfig.name} subtitle={astropodConfig.author} />
+  <HeaderCard title={astropodConfig.name} /*subtitle={astropodConfig.author}*/ />
 
   <div class="card min-w-full bg-base-100 shadow-md p-3 pb-3 mt-12">
     {
