--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,6 @@ import EpisodeLayout from "../layouts/EpisodeLayout.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
 ---
 
-<EpisodeLayout title="About" description={"A Podcast Honoring Dignitaries"} cover={astropodConfig.cover}>
+<EpisodeLayout title="About" cover={astropodConfig.cover}>
   {astropodConfig.description}
 </EpisodeLayout>
